--- a/res/layout/child_item.xml
+++ b/res/layout/child_item.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:padding="10dp" >
- 
+
+    <Button
+        android:id="@+id/download"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Download" />
+    
+    <Button
+        android:id="@+id/view_itunes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View on Itunes" />
+    
+    
     <TextView
         android:id="@+id/song_url"
         android:layout_width="wrap_content"
@@ -11,6 +24,6 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:paddingLeft="25dp" />
+
  
- 
-</RelativeLayout>
+</LinearLayout>
